# py-macos-mic-control

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
mic_control/: __init__.py  __main__.py  audio_monitor.py  config.py  utils.py  volume_controller.py
tests/: README.md  __init__.py  conftest.py  test_mic_control.py
tests/integration/: __init__.py  test_end_to_end.py  test_main.py
tests/unit/: __init__.py  test_audio_monitor.py  test_config.py  test_utils.py  test_volume_controller.py
