[tool.poetry]
name = "py-macos-mic-control"
version = "0.5.0"
description = "Automatic microphone volume control for macOS calls and meetings"
authors = ["Robin Schulz <hello@rschu.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mic_control"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
sounddevice = "^0.5.2"
numpy = "^2.3.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
bandit = "^1.8.5"
safety = "^3.5.2"
pip-audit = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mic-control = "mic_control.__main__:main"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/.venv
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
extend_skip = [".venv"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = """
    -vv
    -ra
    --cov=mic_control
    --cov-report=term-missing
    --no-cov-on-fail
"""
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests with mocked dependencies",
    "integration: Integration tests that test component interactions",
    "slow: Tests that take a long time to run",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
targets = ["mic_control"]
skips = ["B404"]
